<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/studentvoicehub"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/text"
        android:text="@string/firebase_login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/image"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:visibility="invisible"
        android:layout_below="@id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/admin_login"
        android:layout_above="@id/login"
        android:layout_centerInParent="true"
        android:text="ADMIN LOGIN"
        android:background="@drawable/round_bg"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/welcome"
        android:layout_above="@id/Dashboard"
        android:layout_below="@id/text"
        android:textSize="20dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:visibility="invisible"
        android:gravity="center"
        android:text="Welcome to the Student Voice Hub"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Dashboard"
        android:layout_above="@id/login"
        android:layout_marginBottom="20dp"
        android:text="@string/Dashboard"
        android:visibility="invisible"
        android:background="@drawable/round_bg"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:text="@string/login_with_google"
        android:background="@drawable/round_bg"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:drawableStart="@drawable/ic_google_logo"
        android:drawableLeft="@drawable/ic_google_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/logout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:text="@string/logout"
        android:visibility="invisible"
        android:background="@drawable/round_bg"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>