<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Hompage">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:src="@drawable/mc"
            android:layout_width="350dp"
            android:layout_height="350dp" />

    </LinearLayout>
        <LinearLayout
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <android.support.v7.widget.CardView
                android:layout_margin="10dp"
                android:id="@+id/events_student"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_marginTop="5dp"
                        android:src="@drawable/news"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgrounddeeppuple"
                        android:layout_width="64dp"
                        android:layout_height="64dp" />
                    <TextView
                        android:layout_marginBottom="5dp"
                        android:text="@string/Events"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_margin="10dp"
                android:id="@+id/campus_Information_student"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_marginTop="5dp"
                        android:src="@drawable/campus_information"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundgreen"
                        android:layout_width="64dp"
                        android:layout_height="64dp" />

                    <TextView
                        android:layout_marginBottom="5dp"
                        android:text="@string/CampusInformation"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <android.support.v7.widget.CardView
                android:layout_margin="10dp"
                android:id="@+id/Student_Voice_student"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_marginTop="5dp"
                        android:src="@drawable/student_voice"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundpink"
                        android:layout_width="64dp"
                        android:layout_height="64dp" />


                    <TextView
                        android:layout_marginBottom="5dp"
                        android:text="@string/StudentVoice"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_margin="10dp"
                android:id="@+id/student_recommendations_student"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_marginTop="5dp"
                        android:src="@drawable/recommendations"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundlime"
                        android:layout_width="64dp"
                        android:layout_height="64dp" />

                    <TextView
                        android:layout_marginBottom="5dp"
                        android:text="@string/StudentRecommendations"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <android.support.v7.widget.CardView
                android:layout_margin="10dp"
                android:id="@+id/Helpline_Services_student"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_marginTop="5dp"
                        android:src="@drawable/helpline_services"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundcyan"
                        android:layout_width="64dp"
                        android:layout_height="64dp" />


                    <TextView
                        android:layout_marginBottom="5dp"
                        android:text="@string/HelplineServices"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_margin="10dp"
                android:id="@+id/Jobs_student"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_marginTop="5dp"
                        android:src="@drawable/jobs"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundindigo"
                        android:layout_width="64dp"
                        android:layout_height="64dp" />

                    <TextView
                        android:layout_marginBottom="5dp"
                        android:text="@string/Jobs"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <android.support.v7.widget.CardView
                android:layout_margin="10dp"
                android:id="@+id/External_links_student"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_marginTop="5dp"
                        android:src="@drawable/external_links"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundyellow"
                        android:layout_width="64dp"
                        android:layout_height="64dp" />

                    <TextView
                        android:layout_marginBottom="5dp"
                        android:text="@string/Externallinks"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>